--- a/styles/index.css
+++ b/styles/index.css
@@ -43,10 +43,6 @@ main {
     font-size: 2vmax;
 }
 
-.card-container{
-    display: flex;
-}
-
 .card {
     width: 10vw;
     min-width: 100px;
@@ -58,6 +54,7 @@ main {
     transition: all 0.6s ease-in-out;
     -webkit-transition: all 0.6s ease-in-out;
     -moz-transition: all 0.6s ease-in-out;
+    display: none;
 }
 
 .reset {
