--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 16px;
+    font-size: 12px;
 }
 
 body {
@@ -14,10 +14,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
-nav.navbar {
-    padding: 8px 20vw 8px 20vw;
 }
 
 .nav-link {
@@ -36,11 +32,11 @@ main {
 }
 
 .color-picked {
-    font-size: 5vmax;
+    font-size: 3rem;
 }
 
 .message {
-    font-size: 2vmax;
+    font-size: 2rem;
 }
 
 .countdown{
@@ -48,10 +44,10 @@ main {
 }
 
 .card {
-    width: 10vw;
-    min-width: 100px;
-    height: 10vw;
-    min-height: 100px;
+    width: 16vmin;
+    min-width: 50px;
+    height: 16vmin;
+    min-height: 50px;
     margin: 1vw;
     cursor: pointer;
     border: none;
@@ -62,8 +58,8 @@ main {
 }
 
 .reset {
-    margin-top: 5vw;
-    padding: 1rem;
+    margin-top: 5vmin;
+    padding: 2vmin;
     border-radius: 999rem;
     cursor: pointer;
     font-size: 1rem;
@@ -71,6 +67,7 @@ main {
     color: #484848;
     border: none;
     transition: all 0.3s;
+    background-color: #fff;
 }
 
 .reset:focus,
@@ -86,10 +83,24 @@ main {
 
 .reset-text {
     margin-left: 5px;
+    font-size: 1rem;
 }
 
 footer {
     position: relative;
     text-align: center;
     color: white;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+    nav.navbar {
+        padding: 8px 20vw 8px 20vw;
+    }
+    .card{
+        width: 14vmin;
+        height: 14vmin;
+    }
 }
