--- a/styles/index.css
+++ b/styles/index.css
@@ -16,8 +16,13 @@ body {
     justify-content: space-between;
 }
 
+.navbar-brand {
+    font-size: 1.5rem;
+}
+
 .nav-link {
     text-align: center;
+    font-size: 1.25rem;
 }
 
 main {
@@ -44,9 +49,9 @@ main {
 }
 
 .card {
-    width: 16vmin;
+    width: 20vmin;
     min-width: 50px;
-    height: 16vmin;
+    height: 20vmin;
     min-height: 50px;
     margin: 1vw;
     cursor: pointer;
